# c-variant

./: .gitignore  COPYING  Makefile.am  README  autogen.sh  c-variant.spec  configure.ac
src/: c-variant-private.h  c-variant-reader.c  c-variant-writer.c  c-variant.c  c-variant.h  c-variant.pc.in  generator.c  generator.h  libcvariant.pc.in  libcvariant.sym  test-api.c  test-generator.c  test-glib.c  test-perf.c  test-reader.c  test-signature.c  test-writer.c
src/org.bus1/: c-variant.h
